# school-projects

./: README.md
2nd-year/: README.md
2nd-year/CPP/Arcade/bonus/: CMakeLists.txt  Core.cpp  Core.hpp  ILibHandler.hpp  ITime.hpp  LibHandler.hpp  Time.cpp  Time.hpp  main.cpp
2nd-year/CPP/Arcade/bonus/Assets/Pacman/: pacman-general.png~
2nd-year/CPP/Arcade/bonus/game/: AGameModule.cpp  AGameModule.hpp  APixels.cpp  APixels.hpp  ATexts.cpp  IPixel.hpp  IPixels.hpp  Pixel.cpp  Text.cpp  Text.hpp
2nd-year/CPP/Arcade/bonus/graphical/: EventInfo.hpp  IEventInfo.hpp  IWindow.hpp  Pair.hpp
2nd-year/CPP/Raytracer/: CMakeLists.txt  README.md  build.sh
2nd-year/CPP/Raytracer/docs/html/: APrimitive_8hpp_source.html  BackgroundDecorator_8hpp_source.html  BasicComputeColor_8hpp_source.html  Camera_8hpp_source.html  Cone_8hpp_source.html  Cylinder_8hpp_source.html  DisplayPlugin_8hpp_source.html  Error_8hpp_source.html  IComputeColor_8hpp_source.html  ILibHandler_8hpp_source.html  IPlugin_8hpp_source.html  IPrimitive_8hpp_source.html  LibHandler_8hpp_source.html  MaterialComputeColor_8hpp_source.html  Materials_8hpp_source.html  MathUtils_8hpp_source.html  Parser_8hpp_source.html  Plane_8hpp_source.html  Point3d_8hpp_source.html  Random_8hpp_source.html  RayColor_8hpp_source.html  Ray_8hpp_source.html  Raytracer_8hpp_source.html  Scene_8hpp_source.html  Sphere_8hpp_source.html  Vector3d_8hpp_source.html  annotated.html  classDisplayPlugin-members.html  classDisplayPlugin.html  classError-members.html  classError.html  classILibHandler-members.html  classILibHandler.html  classIPlugin-members.html  classIPlugin.html  classLibHandler-members.html  classLibHandler.html  classMath_1_1MathUtils-members.html  classMath_1_1MathUtils.html  classMath_1_1Point3d-members.html  (+67 more)
2nd-year/CPP/Raytracer/docs/latex/: APrimitive_8hpp_source.tex  BackgroundDecorator_8hpp_source.tex  BasicComputeColor_8hpp_source.tex  Camera_8hpp_source.tex  Cone_8hpp_source.tex  Cylinder_8hpp_source.tex  DisplayPlugin_8hpp_source.tex  Error_8hpp_source.tex  IComputeColor_8hpp_source.tex  ILibHandler_8hpp_source.tex  IPlugin_8hpp_source.tex  IPrimitive_8hpp_source.tex  LibHandler_8hpp_source.tex  MaterialComputeColor_8hpp_source.tex  Materials_8hpp_source.tex  MathUtils_8hpp_source.tex  Parser_8hpp_source.tex  Plane_8hpp_source.tex  Point3d_8hpp_source.tex  Random_8hpp_source.tex  RayColor_8hpp_source.tex  Ray_8hpp_source.tex  Raytracer_8hpp_source.tex  Scene_8hpp_source.tex  Sphere_8hpp_source.tex  Vector3d_8hpp_source.tex  annotated.tex  classDisplayPlugin.eps  classDisplayPlugin.tex  classError.tex  classILibHandler.eps  classILibHandler.tex  classIPlugin.eps  classIPlugin.tex  classLibHandler.eps  classLibHandler.tex  classMath_1_1MathUtils.tex  classMath_1_1Point3d.tex  classMath_1_1Random.tex  classMath_1_1Vector3d.tex  (+43 more)
2nd-year/CPP/Raytracer/scenes/: scene.cfg
2nd-year/CPP/Raytracer/src/: Raytracer.cpp  Raytracer.hpp  Scene.hpp  main.cpp
2nd-year/CPP/Raytracer/src/Camera/: Camera.cpp  Camera.hpp
2nd-year/CPP/Raytracer/src/Decorator/: BackgroundDecorator.hpp  BasicComputeColor.hpp  IComputeColor.hpp
2nd-year/CPP/Raytracer/src/Display/: DisplayPlugin.cpp  DisplayPlugin.hpp  IPlugin.hpp
2nd-year/CPP/Raytracer/src/LibHandler/: ILibHandler.hpp  LibHandler.hpp
2nd-year/CPP/Raytracer/src/Maths/: Point3d.cpp  Vector3d.hpp
2nd-year/CPP/Raytracer/src/Parser/: Parser.cpp  Parser.hpp
2nd-year/CPP/Raytracer/src/Primitives/: APrimitive.hpp  Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  Plane.cpp  Plane.hpp  Sphere.hpp
2nd-year/CPP/Raytracer/src/Textures/: Dielectric.cpp  DiffuseLight.cpp  Lambertian.cpp  Materials.hpp
2nd-year/CPP/Raytracer/src/Utils/: Error.hpp  RayColor.hpp
2nd-year/CPP/Raytracer/src/plugins/: Plane.cpp  Sphere.cpp
2nd-year/CPP/Raytracer/tests/: clean.sh
2nd-year/CPP/Raytracer/tests/oneweek/: Ray.cpp  Ray.hpp  Scene.cpp  main.cpp
(+258 files in other folders)
